# agent-metadata-privacy

./: .gitignore  README.md  pyproject.toml
experiments/: run_all.py
paper/: main.tex  references.bib
results/: actuation.csv  anchor_capture.json  anchor_comparison.csv  leakage.csv  prospectivity.csv  protection.csv  sensitivity.csv  summary.md
scripts/: capture_a2a.py  paper_figures.py
src/agentgraph/: __init__.py  actuation.py  adversary.py  anchor.py  classify.py  config.py  evaluate.py  figures.py  protection.py  sensitivity.py  trace.py  workflows.py
tests/: test_actuation.py  test_anchor.py  test_protection.py  test_sensitivity.py  test_workflows.py
